# ResPMangaer

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  chat_stats_features.md  chat_stats_integration_plan.md  docker-compose.yml  feature_plan.md  plan.md  pyproject.toml  respmanager_user_api_migration_plan.md  respmanager_user_api_reactions_plan.md
app/: config.py  logging_config.py  main.py
app/auth/: access_control.py  (+1 more)
config/: activity.yaml  activity.yaml.example  admins.yaml.example  auto_delete.yaml  auto_delete.yaml.example  context_limits.yaml  context_limits.yaml.example  identity.yaml  identity.yaml.example  memory.yaml  memory.yaml.example  prompts.yaml  prompts.yaml.example  reactions.yaml  reactions.yaml.example  stats.yaml  stats.yaml.example
docs/: USER_API_MIGRATION_PLAN.md
tests/: test_access_control.py  test_activity_config.py  test_activity_poller.py  test_activity_service.py  test_auto_delete_config.py  test_bot_identity_service.py  test_command_handlers.py  test_command_parsing.py  test_context_builder.py  test_formatting.py  test_memory_config.py  test_memory_poller.py  test_memory_service.py  test_openrouter_client.py  test_prompt_config.py  test_reaction_poller.py  test_reaction_service.py  test_reactions_config.py  test_runtime_config.py  test_stats_image_renderer.py  test_stats_links.py  test_stats_renderer.py  test_stats_service.py  test_telegram_client_formatting.py  test_telegram_utils.py  test_telethon_adapter_conversion.py  test_time.py  test_tldr_period.py  test_user_mode_config.py
(+54 files in other folders)
